[gd_scene load_steps=6 format=2]

[ext_resource path="res://ShipGenerator/ShipGen.gd" type="Script" id=1]
[ext_resource path="res://ShipGenerator/grid.png" type="Texture" id=2]
[ext_resource path="res://ShipGenerator/grid1.png" type="Texture" id=3]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.0206186, 0 ), 0.0, 4.40909, 0, 0, Vector2( 0.505155, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -4.16518, 0.0, 0, 0 ]

[sub_resource type="TileSet" id=1]
0/name = "grid.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "grid1.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Node2D" type="Node2D"]
z_index = 3
script = ExtResource( 1 )
hull_curve = SubResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 1026.0
margin_bottom = 599.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Generate" type="Button" parent="Control"]
margin_left = 98.631
margin_top = 220.369
margin_right = 169.631
margin_bottom = 244.369
text = "Generate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RandomizeDimensions" type="Button" parent="Control"]
margin_left = 98.631
margin_top = 138.0
margin_right = 148.631
margin_bottom = 165.0
text = "Randomize Dimensions"

[node name="YSize" type="LineEdit" parent="Control"]
margin_left = 199.795
margin_top = 260.712
margin_right = 257.795
margin_bottom = 284.712
placeholder_text = "Y size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XSize" type="LineEdit" parent="Control"]
margin_left = 200.356
margin_top = 222.022
margin_right = 258.356
margin_bottom = 246.022
placeholder_text = "X Size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hull_Height" type="LineEdit" parent="Control"]
margin_left = 200.0
margin_top = 304.0
margin_right = 282.0
margin_bottom = 328.0
placeholder_text = "Hull Height"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = -2
z_as_relative = false
tile_set = SubResource( 1 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 514.774, 301.227 )
current = true
[connection signal="button_down" from="Control/Generate" to="." method="_on_Generate_button_down"]
[connection signal="button_down" from="Control/RandomizeDimensions" to="." method="_on_RandomizeDimensions_button_down"]
